--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build",
     "storybook": "start-storybook -p 9009",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -c .storybook"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
